@@ -2,6 +2,10 @@ table th
 {
     width: 100px;
 }
+div#feedlnkdiv a
+{
+    padding-right: 25px;
+}
 div.feedoption
 {
     padding-bottom: 2px;
@@ -44,10 +48,6 @@ div.feeditemleft
     float: left;
     cursor: move;
     width: 400px;
-}
-div.feeditemleft:hover
-{
-    font-weight: bold;
 }
 div.feeditemtitle
 {
