@@ -1,12 +1,17 @@
 Options -Indexes
 ErrorDocument 404 /404.html
 ErrorDocument 500 /500.html
+
 AddHandler cgi-script .py
 # <Files *.py>
 #     Order deny,allow
 #     Deny from all
 #     Allow from 127.0.0.1
 # </Files>
+
+# http://br2.php.net/manual/en/security.magicquotes.disabling.php
+php_flag magic_quotes_gpc Off
+
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} -s [OR]
 RewriteCond %{REQUEST_FILENAME} -l [OR]
